<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband4 for more book information.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/menu_background1"
   android:elevation="@dimen/elevation_high"
   android:orientation="vertical"
   android:padding="@dimen/menu_padding"
   tools:context=".MainActivity">

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/menu_space"
       android:layout_gravity="center"
      android:text="@string/mainapp_long_name"
      android:textAppearance="?android:textAppearanceLarge"
      android:textSize="34sp"/>

   <Button
      android:id="@+id/tictactoe_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/menu_button_margin"
      android:padding="@dimen/menu_button_padding"
      android:text="@string/tictactoe_label"/>

   <Button
      android:id="@+id/generateerror_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="@dimen/menu_button_margin"
      android:padding="@dimen/menu_button_padding"
      android:text="@string/generate_error_label"/>

   <Button
      android:id="@+id/aboutme_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="@dimen/menu_button_margin"
      android:padding="@dimen/menu_button_padding"
      android:text="@string/aboutme_label"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_label"
        android:id="@+id/dictionary_button"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"/>

    <Button
        android:id="@+id/word_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/word_game"/>

    <Button
        android:id="@+id/communication_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/communication_label"/>

    <Button
        android:id="@+id/two_player_word_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/two_player_word_game"/>

    <Button
        android:id="@+id/trickiest_part_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/trickiest_part"/>

    <Button
        android:id="@+id/final_project_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/final_project"/>

   <Button
       android:id="@+id/quit_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/quit_label"/>

</LinearLayout>

</ScrollView>