

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context=".AboutMeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/nameTextView"
        android:text="@string/aboutme_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/emailTextView"
        android:text="@string/aboutme_email" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/yearTextView"
        android:text="@string/aboutme_year" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/degreeProgTextView"
        android:text="@string/aboutme_degree_program" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imeiTextView"
        android:text="@string/aboutme_imei" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imeiNumberTextView"
        android:layout_centerInParent="true"
        android:textSize="15sp"/>


    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/my_photo" />

</LinearLayout>
