<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightCoral"
    android:orientation="vertical"
    tools:context=".DictionaryActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dictionary_title"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/YellowGreen"
        android:gravity="center"
        android:text="@string/dictionary_title"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dictionary_input"
        android:hint="@string/dictionary_hint"
        android:layout_below="@+id/dictionary_title"
        android:layout_alignRight="@+id/dictionary_acknowledgements_button"
        android:layout_alignEnd="@+id/dictionary_acknowledgements_button" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/dictionary_list_words"
        android:layout_toLeftOf="@+id/dictionary_clear_button"
        android:layout_toStartOf="@+id/dictionary_clear_button"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/dictionary_input" />


        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_return"
            android:id="@+id/dictionary_return_button"
            android:layout_gravity="right"
            android:layout_below="@+id/dictionary_acknowledgements_button"
            android:layout_toRightOf="@+id/dictionary_list_words"
            android:layout_toEndOf="@+id/dictionary_list_words" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_clear"
            android:id="@+id/dictionary_clear_button"
            android:layout_below="@+id/dictionary_return_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acknowledgements_button"
        android:id="@+id/dictionary_acknowledgements_button"
            android:layout_below="@+id/dictionary_input"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/dictionary_list_words"
            android:layout_toEndOf="@+id/dictionary_list_words" />

</RelativeLayout>
