<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding">

    <ImageButton
        android:id="@+id/finalProjLastScreenClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_gravity="right" />

    <TextView
    android:id="@+id/finalProjLastScreenLine1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="35dp"
    android:layout_centerHorizontal="true"
        android:text="@string/final_project_last_screen_line1"
        android:textColor="@color/Maroon"
    android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/finalProjLastScreenLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:text="@string/final_project_last_screen_line2"
        android:textColor="@color/MediumSlateBlue"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/finalProjLastScreenLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:text="@string/final_project_last_screen_line3"
        android:textColor="@color/MediumSpringGreen"
        android:layout_marginTop="40dp" />

</LinearLayout>
</ScrollView>